Reorder ds and atd